Release notes for xmlBlaster (http://www.xmlBlaster.org)
The "r99999" numbers are Subversion revision numbers.

Changes for current svn
=======================

 o r17770 HtPasswd Authentication/Authorization: If a loginName matches exactly only this is evaluated
          before all other matching entries where used to find a valid password

 o r17768 Fixing gap that a quickly reconnecting client leads to missing toPolling() toAlive() firing cylce (race condition)
          Had impact for cluster setup with callback tunnel


Changes for 2.0.0 [2009-09-09] r17766 (JDK >= 1.5 only)
=======================================================

 o r17755 Incompatible java client API change: Added I_ConnectionStatusListener#toAliveSync
          which tells the listener as soon as all queued back client side messages are delivered to the server
          and further server calls are synchronous (the returned data is from the real server).
          The compiler will tell the places to add this method to your code.

 o r17749 Dropped Active X support via JDK bridge. Please use the new C backed C# code.

 o r17744 fixed XmlBuffer also for the QueryKeyData

 o r17739 NPE for set administrative command (CoreHandler.java)

 o r17737 XmlBlasterAccess.java changed behaviour:
          On toDead() the connect() method now throws a XmlBlasterException of type COMMUNICATION_NOCONNECTION_DEAD

 o r17730 added flag mail.messageIdFileName to allow to change the filename for the message id in the mail 
          protocol

 o r17724 fixed what did not have been completely fixed on r17703

 o r17722 keys in the callbackMap are not xml encoded. subscriptionIds coming from the server are encoded. 
          This way the entry was never found in the map and it resulted in invoking the connection general 
          listener instead. This has now been fixed.

 o r17720 MsgInfo: fixed errror which resulted in a forced default configuration if toLiteral was invoked 